# KED

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: package.yml
KED/: __init__.py  coupling.py  generator.py  indexing.py  microscope.py  orientations.py  pattern.py  process.py  reciprocal_lattice.py  rotation.py  sampling.py  simulation.py  structure.py  template.py  tilt.py  utils.py
KED/data/: atomic_scattering_factors.txt  ellipsoid.stl
KED/io/: __init__.py  components.py  hdf.py  mapviewer.py  misc.py  res.py
KED/tests/: test_array_indexing_floats.py  test_atoms.py  test_generator.py  test_microscope.py  test_reciprocal_lattice.py  test_templates.py
conda/: conda_build_config.yaml  index.html  meta.yaml
examples/: interactive_precession_example.py
examples/animations/: interactive_precession_example.py  interactive_precession_example_diffraction accumulate.py  (+2 more)
ked/: coupling.py  generator.py  microscope.py  orientations.py  pattern.py  process.py  reciprocal_lattice.py  rotation.py  sampling.py  simulation.py  structure.py  template.py  utils.py
ked/io/: mapviewer.py  (+1 more)
ked123/: __init__.py  coupling.py  generator.py  reciprocal_lattice.py  sampling.py  tilt.py
notebooks/: Noncrystalline reciprocal lattices.ipynb  fcc twin.ipynb  generator ori testing.ipynb  standard_triangle.ipynb  testing reciprocal lattice.ipynb
tests/: conftest.py  test_array_indexing_floats.py  test_generator.py  test_microscope.py  test_patterns.py  test_reciprocal_lattice.py  test_sampling.py  test_structure.py  test_templates.py  test_utils.py
(+73 files in other folders)
