[metadata]
name = ked
version = file: ked/VERSION
url = https://github.com/harripj/KED
author = Patrick Harrison
author_email = harrison.p.j@icloud.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = Kinematic Electron Diffraction
long_description = file: README.md
keywords = electron microcopy, diffraction
license_files = 
    LICENSE
    
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21
    scipy
    tqdm
    scikit-image
    matplotlib
    ase
    diffpy.structure>=3
    ipywidgets
    ncempy
    orix>=0.11
    pandas

[options.packages.find]
include =
    ked
    ked.*

[options.extras_require]
dev =
    black
    isort

[bdist_wheel]
universal = 0

[isort]
profile = black
filter_files = True
force_sort_within_sections = True
known_first_party = ked
src_paths = ked,tests